--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basic Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>About Us</h2>
+            <p>This is a basic website to demonstrate HTML and CSS.</p>
+        </section>
+        <section>
+            <h2>Services</h2>
+            <p>We offer a range of services to meet your needs.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Basic Website. All rights reserved.</p>
+    </footer>
 </body>
-
 </html>
