--- a/index.html
+++ b/index.html
@@ -8,28 +8,36 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <div class="container">
+            <h1>Welcome to My Website</h1>
+        </div>
     </header>
     <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <div class="container">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </nav>
     <main>
-        <section>
-            <h2>About Us</h2>
-            <p>This is a basic website to demonstrate HTML and CSS.</p>
-        </section>
-        <section>
-            <h2>Services</h2>
-            <p>We offer a range of services to meet your needs.</p>
-        </section>
+        <div class="container">
+            <section>
+                <h2>About Us</h2>
+                <p>This is a basic website to demonstrate HTML and CSS.</p>
+            </section>
+            <section>
+                <h2>Services</h2>
+                <p>We offer a range of services to meet your needs.</p>
+            </section>
+        </div>
     </main>
     <footer>
-        <p>&copy; 2024 Basic Website. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Basic Website. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
