--- a/index.html
+++ b/index.html
@@ -1,43 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Website</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Welcome to My Website</h1>
-        </div>
-    </header>
+<html>
+	<head>
+		<title>portfolio</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
+
+
     <nav>
-        <div class="container">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
+      <ul id="navbar">
+        <li><a href="#welcome-section" rel="internal">Here</a></li>
+        <li><a href="#projects" rel="internal">Projects</a></li>
+        <li><a href="#contact" rel="internal">Contact</a></li>
+      </ul>
     </nav>
-    <main>
-        <div class="container">
-            <section>
-                <h2>About Us</h2>
-                <p>This is a basic website to demonstrate HTML and CSS.</p>
-            </section>
-            <section>
-                <h2>Services</h2>
-                <p>We offer a range of services to meet your needs.</p>
-            </section>
-        </div>
-    </main>
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Basic Website. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
+  
+
+<body>
+  <div id="welcome-section" >
+    <h1>Welcome to my world</h1>
+    <p>Gently hatching from the programming egg.</p>
+  </div>
+
+<div id="projects" class="work">
+<h2 class="work-header">Here is what I have done</h2>
+  <a href="https://codepen.io/noethix/full/jvwbLw/" target="_blank" class="project project-tile">
+    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/functional_design.jpg" alt="project">
+    <div class="project-title">Functional Design</div>
+  </a>
+
+  <a href="https://codepen.io/noethix/full/vzZEem/" target="_blank" class="project project-tile">
+    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/trbute_page.jpg" alt="project">
+    <div class="project-title">Tribute Page</div>
+  </a>
+
+  <a href="https://codepen.io/noethix/full/gdRaoP/" target="_blank" class="project project-tile">
+    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/questionnaire.jpg" alt="project">
+    <div class="project-title">Questionnaire</div>
+  </a>
+
+  <a href="https://codepen.io/noethix/full/rZwapB/" target="_blank" class="project project-tile">
+    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/tech_page.jpg" alt="project">
+    <div class="project-title">Technical Documentation Page</div>
+  </a>
+
+  <a href="https://codepen.io/noethix/" class="show-all" target="_blank">Projects</a>
+</div>
+
+  <div class="contact">
+  <div class="header">
+    <h1>Ways to get in touch</h1>
+    <p>or send me a message!</p>
+  </div>
+  <a id='profile-link' href="https://github.com/noethix" target="_blank" class="contact-details"><img src="https://res.cloudinary.com/noethix/image/upload/v1537359418/GitHub-Mark-64px.png"></a> 
+  <a href="mailto:cecilecampagne@gmail.com" class="contact-details" ><img src="https://res.cloudinary.com/noethix/image/upload/v1537202434/porfolio/email.png"></a>
+  <a href="tel:0033662290690" class="contact-details"><img src="https://res.cloudinary.com/noethix/image/upload/v1537360973/telephone.png"></a>
+</div>
+ </body>
 </html>
