--- a/index.html
+++ b/index.html
@@ -1,59 +1,66 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>portfolio</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-
-
-    <nav>
-      <ul id="navbar">
-        <li><a href="#welcome-section" rel="internal">Here</a></li>
-        <li><a href="#projects" rel="internal">Projects</a></li>
-        <li><a href="#contact" rel="internal">Contact</a></li>
-      </ul>
-    </nav>
-  
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-  <div id="welcome-section" >
-    <h1>Welcome to my world</h1>
-    <p>Gently hatching from the programming egg.</p>
-  </div>
+    <header>
+        <h1>Welcome to My Website</h1>
+        <nav>
+            <ul>
+                <li><a href="#math">Math</a></li>
+                <li><a href="#physics">Physics</a></li>
+                <li><a href="#graphic-production">Graphic Production</a></li>
+                <li><a href="#engineering">Engineering</a></li>
+                <li><a href="#spanish">Spanish</a></li>
+                <li><a href="#english">English</a></li>
+                <li><a href="#ap-csp">AP CSP</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<div id="projects" class="work">
-<h2 class="work-header">Here is what I have done</h2>
-  <a href="https://codepen.io/noethix/full/jvwbLw/" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/functional_design.jpg" alt="project">
-    <div class="project-title">Functional Design</div>
-  </a>
+    <main>
+        <section id="math" class="class-section">
+            <h2>Math</h2>
+            <!-- Content for Math class -->
+        </section>
 
-  <a href="https://codepen.io/noethix/full/vzZEem/" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/trbute_page.jpg" alt="project">
-    <div class="project-title">Tribute Page</div>
-  </a>
+        <section id="physics" class="class-section">
+            <h2>Physics</h2>
+            <!-- Content for Physics class -->
+        </section>
 
-  <a href="https://codepen.io/noethix/full/gdRaoP/" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/questionnaire.jpg" alt="project">
-    <div class="project-title">Questionnaire</div>
-  </a>
+        <section id="graphic-production" class="class-section">
+            <h2>Graphic Production</h2>
+            <!-- Content for Graphic Production class -->
+        </section>
 
-  <a href="https://codepen.io/noethix/full/rZwapB/" target="_blank" class="project project-tile">
-    <img class="project-pic" src="https://res.cloudinary.com/noethix/image/upload/v1537349719/porfolio/tech_page.jpg" alt="project">
-    <div class="project-title">Technical Documentation Page</div>
-  </a>
+        <section id="engineering" class="class-section">
+            <h2>Engineering</h2>
+            <!-- Content for Engineering class -->
+        </section>
 
-  <a href="https://codepen.io/noethix/" class="show-all" target="_blank">Projects</a>
-</div>
+        <section id="spanish" class="class-section">
+            <h2>Spanish</h2>
+            <!-- Content for Spanish class -->
+        </section>
 
-  <div class="contact">
-  <div class="header">
-    <h1>Ways to get in touch</h1>
-    <p>or send me a message!</p>
-  </div>
-  <a id='profile-link' href="https://github.com/noethix" target="_blank" class="contact-details"><img src="https://res.cloudinary.com/noethix/image/upload/v1537359418/GitHub-Mark-64px.png"></a> 
-  <a href="mailto:cecilecampagne@gmail.com" class="contact-details" ><img src="https://res.cloudinary.com/noethix/image/upload/v1537202434/porfolio/email.png"></a>
-  <a href="tel:0033662290690" class="contact-details"><img src="https://res.cloudinary.com/noethix/image/upload/v1537360973/telephone.png"></a>
-</div>
- </body>
+        <section id="english" class="class-section">
+            <h2>English</h2>
+            <!-- Content for English class -->
+        </section>
+
+        <section id="ap-csp" class="class-section">
+            <h2>AP CSP</h2>
+            <!-- Content for AP CSP class -->
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer>
+</body>
 </html>
